assets/css/page.css
.background {
  background-image: url("../images/frontpage/pattern-background.jpg");
  min-height: calc(100vh - 61px - 200px);
}

h1 {
  font-family: opensans;
  text-transform: uppercase;
  font-size: 3.5em;
  font-weight: normal;
  color: #333;
  border-bottom: 2px solid black;
  text-shadow: none;
  margin: 10px -2vw;
}

@media (max-width: 1200px) and (min-width: 768px){
  h1 {
    font-size: 2.5em;
  }
}

p {
  padding: 10px;
  margin-top: 20px;
}

.content-page {
  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
  min-height: 50vh;
  padding: 5vh 8vw;
  padding-top: 30px;
  background-color: rgb(255, 255, 255);
  height: 100%;
}

.content-container {
  margin-top: 80px;
  margin-bottom: 80px;
}

.rotate180 {
  -ms-transform: rotate(180deg); /* IE 9 */
  -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
  transform: rotate(180deg);
}

img.center {
  display: block;
  margin: 0 auto;
}


/*
 * Committee pages styles
 */
.person {
  max-width: 50vw;
  margin: auto;
  padding: 0 0 20px 0;
}

.person-img {
  padding: 1vw 1vw 10px 1vw;
}

.person-img > img {
  box-shadow: 0 0 20px rgba(0,0,0,0.20)
}

.folding-list {
  list-style-type: none;
  margin-top: 80px;
  margin-left: -4vw;
  margin-right: -2vw;
}

.folding-item {
  margin-top: 20px;
  margin-left: -20px;
  margin-right: -20px;
  padding: 15px 20px 10px 25px;
  border-color: #0ba360;
  border-width: 2px;
  border-style: solid;
  border-radius: 10px;
  box-shadow: 0 0 20px rgba(0,0,0,0.17)
}

.folding-item > a {
  font-size: 1.8em;
}

.document-list {
  list-style-type: none;
}

.document-top {
  margin-left: 20px;
  margin-top: 40px;
  font-size: 1.5em;
}

.document-item {
  margin-left: 20px;
  font-size: 1.2em;
}

/*
 * Signup and registration styles
 */
.recaptcha-container {
  margin-top: 2rem;
  margin-bottom: 2rem;
}

form, .account-container {
  margin: 1rem;
  margin-top: 2rem;
}

.form-row {
  display: block;
  margin-top: 1rem;
}

.form-row label {
  display: block;
  margin-bottom: 0;
}

.form-row .radio {
  margin-right: 1rem;
  display: inline-block;
}

.form-row input {
  margin-right: 0.5rem;
}


.snapsi-container {
  margin-right: -4vw;
  margin-left: -4vw;
}

.snapsi {
  width: 100%;
  margin-bottom: 20px;
  transition-duration: 0.4s;
  box-shadow: 0 0 20px rgba(0,0,0,0.19);
}

.snapsi:hover {
  transition-duration: 0.4s;
  box-shadow: 0 6px 30px rgba(0,0,0,0.4);
}

